authentik/ingress.yaml
# Source: authentik/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  labels:
    helm.sh/chart: authentik-2023.4.0
    app.kubernetes.io/name: authentik
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/version: "2023.4.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "authentik.dev-riles.xyz."
    cert-manager.io/cluster-issuer: "le-example-http"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - authentik.dev-riles.xyz
      secretName: tls-authentik-ingress-http
  rules:
    - host: "authentik.dev-riles.xyz"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  name: http
